--- a/util/job_launching/configs/define-standard-cfgs.yml
+++ b/util/job_launching/configs/define-standard-cfgs.yml
@@ -143,6 +143,9 @@ RR:
 GTO:
     extra_params: "-gpgpu_scheduler gto"
 
+SINGLEWARP:
+    extra_params: "-gpgpu_scheduler exp_single_warp"
+
 128B:
     extra_params: "-gpgpu_mem_addr_mapping dramid@7;00000000.00000000.00000000.00000000.0000RRRR.RRRRRRRR.RBBBCCCC.BCCSSSSS"
 
